--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,125 @@
+.container {
+ 
+
+}
+
+.brand-logo {
+  text-align: center;
+}
+
+h1 {
+  font-family: 'h1-heading';
+  font-size: 8em;
+}
+
+@font-face {
+  font-family: 'h1-heading';
+  src: url('./assets/book-heading.ttf');
+}
+
+
+p{
+  font-family: 'p-heading';
+  font-size: 4em;
+  margin-top: -7%;
+}
+
+@font-face {
+  font-family: 'p-heading';
+  src: url('./assets/h2-heading.ttf');
+}
+
 img {
   width: 200px;
   height: 200px;
 }
+
+button {
+  color: white;
+  margin-top: 20px;
+  background: #1DA1F2;
+  height: 40px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: 900;
+  box-shadow: 6px 6px 6px #cbced1, -6px -6px 6px white;
+  transition: 0.5s;
+  width: 200px;
+  margin-bottom: 15%;
+}
+
+button:hover {
+  box-shadow: none;
+}
+
+
+.btn-form {
+    color: #000;
+    text-decoration: none;
+    font-size: 15px;
+    border: none;
+    background-color: #f79ac0;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    width:100px;
+  }
+  
+  .btn-form::before {
+    margin-left: auto;
+  }
+  
+  .btn-form::after, .btn-form::before {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: rgb(69, 45, 225);
+    display: block;
+    transition: 0.5s;
+  }
+  
+  .btn-form:hover::after, .btn-form:hover::before {
+    width: 100%;
+  }
+
+  form {
+    position: relative;
+    z-index: 1;
+    
+    background:
+    radial-gradient(
+        khaki 40px,
+        transparent 0,
+        transparent 100%
+    ),
+    radial-gradient(
+        skyblue 40px,
+        transparent 0,
+        transparent 100%
+    ),
+    radial-gradient(
+        pink 40px,
+        transparent 0,
+        transparent 100%
+    ), snow;
+background-blend-mode: multiply;
+background-size: 100px 100px;
+background-position: 0 0, 33px 33px, -33px -33px;
+    max-width: 360px;
+    margin: 0 auto 100px;
+    padding: 45px;
+    text-align: center;
+    border-radius: 2rem;
+  }
+  form input {
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+  }
+ 
+  /* BOOKS SECTION */
+ 
