--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,3 +123,30 @@ background-position: 0 0, 33px 33px, -33px -33px;
  
   /* BOOKS SECTION */
  
+/* Nav */
+nav {
+}
+
+ul {
+  margin-right: 1%;
+  display: flex;
+  justify-content: end;
+  margin-top: -4%;
+}
+
+li {
+list-style: none;
+margin-top: 2%;
+padding: 2%;
+}
+
+li > a {
+  color: black;
+  text-decoration: none;
+  font-family: "nav-text";
+  font-size: 32px;
+}
+
+li > a:hover {
+  color: red;
+}
