--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 .container {
  
 
@@ -21,7 +26,6 @@ h1 {
 p{
   font-family: 'p-heading';
   font-size: 4em;
-  margin-top: -7%;
 }
 
 @font-face {
@@ -127,6 +131,12 @@ background-position: 0 0, 33px 33px, -33px -33px;
 nav {
 }
 
+#nav-img {
+  width: 55px;
+  height:55px;
+  margin-top: 3%;
+}
+
 ul {
   margin-right: 1%;
   display: flex;
@@ -149,4 +159,45 @@ li > a {
 
 li > a:hover {
   color: red;
+}
+
+
+/* LANDING PAGE */
+#login-text {
+  display: flex;
+  justify-content: center;
+}
+
+/*ABOUT SECTION */
+#about-section, #catalog-section {
+  display: flex;
+  justify-content: center;
+}
+
+#about-heading {
+  color: #000;
+  font-size: 6em;
+}
+
+/* CATALOG SECTION*/
+#catalog-heading {
+  color: #000;
+  font-size: 6em;
+}
+
+/* FOOTER */
+
+footer {
+  clear: both;
+  position: relative;
+  height: 114px;
+  margin-top: -200px;
+  background-color: black;
+  margin-top: 5%;
+}
+#footer-text {
+  display: flex;
+  justify-content: center;
+  font-size: 3em;
+  color: white;
 }
